pipeline/nexus/nexus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: nexus
  name: nexus
  namespace: user15-nexus
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: nexus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: nexus
    spec:
      containers:
      - image: sonatype/nexus3:3.21.2
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2"
        # probes stolen from https://github.com/m88i/nexus-operator
        livenessProbe:
          initialDelaySeconds: 240
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
          failureThreshold: 3
          httpGet:
            path: /service/rest/v1/status
            port: 8081
        readinessProbe:
          initialDelaySeconds: 240
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
          failureThreshold: 3
          httpGet:
            path: /service/rest/v1/status
            port: 8081
        imagePullPolicy: IfNotPresent
        name: nexus
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-volume-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: nexus-volume-1
          persistentVolumeClaim:
            claimName: nexus-volume-1
