pipeline/nexus/nexus-docker-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus-docker
  namespace: user15-nexus
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    deployment: nexus
  sessionAffinity: None
  type: ClusterIP
