pipeline/nexus/nexus-docker-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus
  name: nexus-docker
  namespace: user15-nexus
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: nexus-docker
    weight: 100
  wildcardPolicy: None
